--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -1,12 +1,91 @@
-﻿<Window x:Class="TingenNyqvist.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TingenNyqvist"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="TingenNyqvist.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TingenNyqvist"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="1000"
+    Height="415"
+    mc:Ignorable="d">
     <Grid>
+        <Image
+            x:Name="imgNyqvistLogo"
+            Width="256"
+            Height="256"
+            Margin="-20,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Source="/AppData/Image/Logo/tingen-nyqvist-logo-256x256.png" />
+        <Border
+            x:Name="brdrHorizontalSeparator"
+            Width="1"
+            Height="400"
+            Margin="0,15,550,14"
+            BorderBrush="  Black"
+            BorderThickness="1" />
+        <Label
+            x:Name="lblNyqvistUserName"
+            Width="75"
+            Margin="10,261,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Right"
+            Background="Black"
+            Content="Username"
+            FontFamily="Bahnschrift SemiBold"
+            FontSize="14"
+            Foreground="White" />
+        <TextBox
+            x:Name="txbxNyqvistUserName"
+            Width="120"
+            Height="27"
+            Margin="85,261,0,0"
+            Padding="5,0,5,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            VerticalContentAlignment="Center"
+            CharacterCasing="Upper"
+            FontFamily="Bahnschrift"
+            FontSize="14"
+            Text=""
+            TextWrapping="NoWrap" />
+        <Label
+            x:Name="lblNyqvistUserPassword"
+            Width="75"
+            Margin="10,293,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            HorizontalContentAlignment="Right"
+            Background="Black"
+            Content="Password"
+            FontFamily="Bahnschrift SemiBold"
+            FontSize="14"
+            Foreground="White" />
+        <TextBox
+            x:Name="txbxNyqvistUserPassword"
+            Width="120"
+            Height="27"
+            Margin="85,293,0,0"
+            Padding="5,0,5,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            VerticalContentAlignment="Center"
+            FontFamily="Bahnschrift"
+            FontSize="14"
+            Text=""
+            TextWrapping="NoWrap" />
+        <Button
+            x:Name="btnNyqvistLogin"
+            Width="60"
+            Height="27"
+            Margin="145,325,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            Content="Login"
+            IsEnabled="False" />
+
 
     </Grid>
 </Window>
