--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -52,7 +52,7 @@
             FontFamily="Bahnschrift"
             FontSize="14"
             Text=""
-            TextWrapping="NoWrap">
+            TextWrapping="NoWrap" TextChanged="txbxNyqvistUserName_TextChanged">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="0,5,5,0" />
@@ -90,28 +90,13 @@
             FontFamily="Bahnschrift"
             FontSize="14"
             Text=""
-            TextWrapping="NoWrap">
+            TextWrapping="NoWrap" TextChanged="txbxNyqvistUserPassword_TextChanged">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="0,5,5,0" />
                 </Style>
             </TextBox.Resources>
         </TextBox>
-        <Button
-            x:Name="btnNyqvistLogin"
-            Width="60"
-            Height="27"
-            Margin="145,340,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Content="Login"
-            IsEnabled="False">
-            <Button.Resources>
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="5" />
-                </Style>
-            </Button.Resources>
-        </Button>
         <TextBox
             x:Name="txbxQuery"
             Width="739"
@@ -120,16 +105,15 @@
             Padding="10,40,10,5"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            HorizontalContentAlignment="Center"
-            VerticalContentAlignment="Center"
             AcceptsReturn="True"
             BorderBrush="Black"
+            IsEnabled="false"
             BorderThickness="2"
             FontFamily="Cascadia Mono"
             FontSize="12"
-            Text="Type or paste a SQL query here"
+            Text=""
             TextWrapping="Wrap"
-            VerticalScrollBarVisibility="Auto">
+            VerticalScrollBarVisibility="Auto" TextChanged="txbxQuery_TextChanged">
             <TextBox.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="6" />
