--- a/src/MainWindow.xaml
+++ b/src/MainWindow.xaml
@@ -111,7 +111,7 @@
             BorderBrush="Black"
             BorderThickness="2"
             FontFamily="Cascadia Mono"
-            FontSize="12"
+            FontSize="14"
             IsEnabled="false"
             Text=""
             TextChanged="txbxQuery_TextChanged"
@@ -180,7 +180,7 @@
             BorderBrush="Black"
             BorderThickness="2"
             FontFamily="Cascadia Mono"
-            FontSize="12"
+            FontSize="14"
             Text=""
             TextWrapping="Wrap"
             VerticalScrollBarVisibility="Auto">
@@ -218,7 +218,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="LIVE"
-            IsEnabled="False">
+            IsEnabled="False" Click="btnQueryLive_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5" />
@@ -233,7 +233,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="SBOX"
-            IsEnabled="False">
+            IsEnabled="False" Click="btnQuerySbox_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5" />
@@ -248,7 +248,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="UAT"
-            IsEnabled="False">
+            IsEnabled="False" Click="btnQueryUat_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5" />
@@ -263,7 +263,7 @@
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
             Content="BLD"
-            IsEnabled="False">
+            IsEnabled="False" Click="btnQueryBld_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="5" />
@@ -294,7 +294,7 @@
             x:Name="btnFormatXml"
             Width="84"
             Height="22"
-            Margin="354,323,0,0"
+            Margin="354,324,0,0"
             Padding="0,2,0,0"
             Foreground="LawnGreen"
             Background="DarkGreen"
@@ -304,7 +304,7 @@
             BorderThickness="1"
             Content="Format XML"
             FontFamily="Bahnschrift SemiLight"
-            FontSize="12">
+            FontSize="12" Click="btnFormatXml_Click">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="4" />
@@ -323,7 +323,7 @@
             BorderBrush="Black"
             BorderThickness="2"
             FontFamily="Cascadia Mono"
-            FontSize="12"
+            FontSize="14"
             Text=""
             TextWrapping="Wrap"
             VerticalScrollBarVisibility="Auto">
@@ -353,20 +353,5 @@
                 </Style>
             </Label.Resources>
         </Label>
-        <Button
-            x:Name="btnCopyWebServiceCall"
-            Width="26"
-            Height="26"
-            Margin="451,586,0,0"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            BorderThickness="0"
-            Content="">
-            <Button.Background>
-                <ImageBrush ImageSource="/AppData/Image/Control/copy-48.png" />
-            </Button.Background>
-        </Button>
-
-
     </Grid>
 </Window>
